server configuration: cassandra, sbt, gaea